    encodings etc. in the FN field, thanks to Rogerio Brito
    <rbrito@ime.usp.br> (Closes: #198633).
  * Search for .gnome/GnomeCard.gcd in $HOME instead of current directory.
  * m_abook: Search for $HOME/.abook/addressbook in addition to
    $HOME/.abook.addressbook to honor the fact that this file was moved in
    abook 0.5 (Closes: #205418).
  
 --

lbdb (0.27) unstable; urgency=low

  * New module m_osx_addressbook, which queries the OS X AddressBook (only
    on OS X with the Developer tools installed) written by Brendan Cully
    <brendan@kublai.com>.
  * Fix description of m_nispasswd in debian/control (Closes: #185573).
  * Upgrade to Standards-Version 3.5.9 (no changes).
  * Add ${misc:Depends} to dependencies.

 -- Roland Rosenfeld <roland@debian.org>  Sat, 22 Mar 2003 16:02:20 +0100

lbdb (0.26.2) unstable; urgency=low

  * Optimized manual page in mutt_ldap_query.pl, to look less corrupted.
  * mutt_ldap_query: Add new config option $ignorant (and also 7th field in
    NICK array) to enable ignorant searching (search for *foo* instead of
    foo) (Closes: #179861).

 -- Roland Rosenfeld <roland@debian.org>  Sun,  9 Feb 2003 13:19:49 +0100

lbdb (0.26.1) unstable; urgency=low

  * Rebuild configure with autoconf 2.57.
  * Add long options --version and --help to ldbdq and man page.
  * Support multiple address book files with abook.  Thanks to Etienne
    PIERRE <marluchon@netcourrier.com> for providing this patch.
  * New mail address of Brian Salter-Duke <b_duke@octa4.net.au>.
  * Upgrade to Standards-Version 3.5.8 (handling of compiler optimization
    in DEB_BUILD_OPTIONS changed).
  * Upgrade to debhelper 4.
  * Remove dependency on awk, which is essential, to make lintian happy.
  * Use /etc/mailname as mail domain name in lbdb_hostname() (Closes: #165159).

 -- Roland Rosenfeld <roland@debian.org>  Sat,  8 Feb 2003 18:28:36 +0100

lbdb (0.26) unstable; urgency=low

  * m_finger: Suppress lines where real name is '???' (some versions of